# textual-tetris

./: .gitignore  Makefile  README.md  pyproject.toml  textris.css  textris.py  textris2.py
.github/: FUNDING.yml
.github/workflows/: cd.yml
